# Nonlinear-Control-for-Holybro-X500-Drone

./: README.md
src/vio_mavlink_bridge/: CMakeLists.txt  package.xml
src/vio_mavlink_bridge/config/: ardupilot_params.param  bridge_params.yaml  controller_params.yaml
src/vio_mavlink_bridge/include/vio_mavlink_bridge/: mavlink_bridge_node.hpp  sliding_mode_controller.hpp
src/vio_mavlink_bridge/launch/: full_stack.launch.py  mavlink_bridge.launch.py
src/vio_mavlink_bridge/scripts/: ekf_monitor.py  stereo_calibration.py
src/vio_mavlink_bridge/src/: mavlink_bridge_node.cpp  sliding_mode_controller.cpp
systemd/: vio-autonomy.service  vio-mavlink-bridge.service
