<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vio_mavlink_bridge</name>
  <version>1.0.0</version>
  <description>
    VIO to MAVLink bridge for GPS-denied indoor autonomy on Holybro X500.
    Feeds Visual-Inertial Odometry into ArduPilot EKF3 via VISION_POSITION_ESTIMATE
    messages with sliding mode control for robust position tracking.
  </description>
  
  <maintainer email="bj2519@columbia.edu">Barath Kumar JK</maintainer>
  <license>MIT</license>
  
  <url type="website">https://github.com/yourusername/holybro_x500_autonomy</url>
  <url type="repository">https://github.com/yourusername/holybro_x500_autonomy</url>
  <url type="bugtracker">https://github.com/yourusername/holybro_x500_autonomy/issues</url>
  
  <author email="bj2519@columbia.edu">Barath Kumar JK</author>
  
  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>mavros_msgs</build_depend>
  
  <!-- Runtime dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  
  <!-- Optional dependencies -->
  <exec_depend condition="$ROS_DISTRO == humble">realsense2_camera</exec_depend>
  <exec_depend condition="$ROS_DISTRO == humble">depthai_ros</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
